--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=postgresql://postgres:YxCqep6Uvf5qgG10OjM1@containers-us-west-177.railway.app:6717/railway
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
-spring.datasource.password=L4D3d10s
+spring.datasource.password=YxCqep6Uvf5qgG10OjM1
 jwt.secret = palabraclave
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
