--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
-spring.datasource.url=jdbc://postgres:5oEImBGp4dvZ6gz1wMUj@containers-us-west-102.railway.app:8039/railway
+spring.datasource.url=postgres://postgres:5oEImBGp4dvZ6gz1wMUj@containers-us-west-102.railway.app:8039/railway
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
-spring.datasource.password=YxCqep6Uvf5qgG10OjM1
+spring.datasource.password=5oEImBGp4dvZ6gz1wMUj
 jwt.secret = palabraclave
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
