--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=postgres://postgres:5oEImBGp4dvZ6gz1wMUj@containers-us-west-102.railway.app:8039/railway
+spring.datasource.url=jdbc:postgres://5oEImBGp4dvZ6gz1wMUj@containers-us-west-102.railway.app:8039/railway
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=5oEImBGp4dvZ6gz1wMUj
