--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-spring.datasource.url=jdbc:postgresql://${{Postgres.PGHOST}}:${{Postgres.PGPORT}}/${{Postgres.PGDATABASE}}
+spring.datasource.url=jdbc:postgresql://containers-us-west-102.railway.app:8039/railway
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=postgres
 spring.datasource.password=5oEImBGp4dvZ6gz1wMUj
